--- a/index.html
+++ b/index.html
@@ -1,56 +1,72 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Oshine Adaptado</title>
-  <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title></title>
+<link href="img/favicon.png" rel="shortcut icon">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-custom.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
 
 <header>
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
-        <img src="img/v23-logo-black.png" alt="Logo" class="img-fluid">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about-features">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#results">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Get in Touch</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+	<div class="container-fluid">
+
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+			<a class="navbar-brand" href="index.html"><img src="img/v23-logo-black.png" alt="" class="img-fluid"></a>
+
+
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+
+		  <div class="collapse navbar-collapse" id="navbar">
+			<ul class="navbar-nav ms-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="index.html">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Services</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Projects</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Blog</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Get in Touch</a>
+			  </li>
+			</ul>
+
+
+		  </div>
+		</nav>
+
+	</div>
 </header>
 
-<!-- Hero con imagen de chicas trabajando -->
-<section id="hero-chicas" class="hero-chicas">
-  <div class="container-fluid p-0 position-relative">
-    <img src="img/hero_oshine_v6.jpeg" alt="Chicas trabajando" class="hero-img">
-    <div class="hero-overlay"></div>
-    <div class="hero-text text-center text-white">
-      <h1 class="display-4 fw-bold">Design. Innovate<br>Transform</h1>
+<section class="hero-full">
+  <img src="img/hero_oshine_v6.jpeg" alt="Hero background" class="hero-img">
+  <div class="hero-overlay"></div>
+  <div class="hero-content container">
+    <div class="hero-text text-white text-start">
+      <h1 class="display-4 fw-bold">Design. Innovate.<br>Transform</h1>
       <p class="lead mt-3">
         Oshine comes with 23 unique and stunning demos. We have crafted each and every demo with extensive care and precision and the theme is power packed yet easy to use.
       </p>
       <div class="mt-4">
-        <a href="#about" class="btn btn-outline-light btn-lg me-3">ABOUT US</a>
-        <a href="#get-started" class="btn btn-success btn-lg">GET STARTED</a>
+        <a href="#about" class="btn btn-outline-light btn-lg rounded-pill me-3">ABOUT US</a>
+        <a href="#get-started" class="btn btn-success btn-lg rounded-pill">GET STARTED</a>
       </div>
     </div>
   </div>
@@ -171,5 +187,25 @@
 </section>
 
 
-<!-- CTA final -->
-<section class="cta-bar bg
+<section id="cta">
+		<div class="container">
+			<h2>HAVE A PROJECT ? GET IN TOUCH WITH US</h2>
+			<a href="#" class="btn btn-light">Contact Us</a>
+		</div>
+	</section>
+
+
+<footer>
+	<div class="container">
+		<p>Examen Segundo Parcial</p>
+	</div>
+</footer>
+
+<!-- js -->
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
+
