--- a/index.html
+++ b/index.html
@@ -145,15 +145,49 @@
 </section>
 
 <!-- Servicios -->
-<section id="results" class="py-5">
-  <div class="container">
-    <div class="row text-center g-4">
-      <div class="col-md-4"><i class="far fa-gem fa-2x text-success mb-2"></i><h5>BRANDING</h5><p>Strategy and identity</p></div>
-      <div class="col-md-4"><i class="far fa-lightbulb fa-2x text-success mb-2"></i><h5>MARKETING</h5><p>Take your brand to the next level</p></div>
-      <div class="col-md-4"><i class="fas fa-desktop fa-2x text-success mb-2"></i><h5>ADVERTISING</h5><p>Reach your audience</p></div>
-      <div class="col-md-4"><i class="fas fa-mobile-alt fa-2x text-success mb-2"></i><h5>MOBILE APPS</h5><p>Custom mobile solutions</p></div>
-      <div class="col-md-4"><i class="fas fa-search fa-2x text-success mb-2"></i><h5>SEO</h5><p>Boost your visibility</p></div>
-      <div class="col-md-4"><i class="far fa-newspaper fa-2x text-success mb-2"></i><h5>PR</h5><p>Public relations strategy</p></div>
+<section id="services" class="services-section">
+  <div class="container text-center">
+    <h2 class="mb-5">Our Services</h2>
+    <div class="row">
+      <!-- Branding -->
+      <div class="col-md-4 service-item">
+        <i class="fa-solid fa-anchor fa-2x text-verde mb-3"></i>
+        <h5>BRANDING</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
+      <!-- SEO -->
+      <div class="col-md-4 service-item">
+        <i class="fa-solid fa-magnifying-glass fa-2x text-verde mb-3"></i>
+        <h5>SEO</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
+      <!-- Marketing -->
+      <div class="col-md-4 service-item">
+        <i class="fa-regular fa-lightbulb fa-2x text-verde mb-3"></i>
+        <h5>MARKETING</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
+    </div>
+
+    <div class="row mt-4">
+      <!-- Advertising -->
+      <div class="col-md-4 service-item">
+        <i class="fa-solid fa-display fa-2x text-verde mb-3"></i>
+        <h5>ADVERTISING</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
+      <!-- Mobile Apps -->
+      <div class="col-md-4 service-item">
+        <i class="fa-solid fa-mobile-screen-button fa-2x text-verde mb-3"></i>
+        <h5>MOBILE APPS</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
+      <!-- PR -->
+      <div class="col-md-4 service-item">
+        <i class="fa-regular fa-newspaper fa-2x text-verde mb-3"></i>
+        <h5>PR</h5>
+        <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat.</p>
+      </div>
     </div>
   </div>
 </section>
