--- a/index.html
+++ b/index.html
@@ -78,52 +78,68 @@
   <div class="container">
     <!-- Título principal -->
     <div class="text-center mb-5">
-      <h2 class="fw-bold">We can help your business scale <span class="text-success">new heights</span>.</h2>
+      <h2 class="fw-bold">
+        We can help your business scale <span class="text-verde">new heights</span>.
+      </h2>
       <p class="lead">Get Going Now</p>
     </div>
 
+    <!-- Dos columnas de texto -->
     <div class="row mb-5">
       <div class="col-md-6">
         <p class="text-justify">
-          Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh. Fusce convallis sapien placerat tellus suscipit vehicula. Cras vitae diam ut justo elementum faucibus eget a diam. Etiam sodales a sem vitae fermentum. Curabitur pellentesque massa eu nulla et consequat porttitor arcu porttitor.
+          Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut, luctus accumsan nibh.
+          Fusce convallis sapien placerat tellus suscipit vehicula. Cras vitae diam ut justo elementum
+          faucibus eget a diam. Etiam sodales a sem vitae fermentum. Curabitur pellentesque massa eu nulla
+          et consequat porttitor arcu porttitor.
         </p>
       </div>
       <div class="col-md-6">
         <p class="text-justify">
-          Ea mei nostrum imperdiet deterruisset, mei ludus efficiendi ei. Sea summo mazim ex, ea errem eleifend definitionem vim. Ut nec hinc dolor possim. An eros argumentum vel, elit diceret duo eu, quo et aliquid ornatus delicatissimi.
+          Ea mei nostrum imperdiet deterruisset, mei ludus efficiendi ei. Sea summo mazim ex, ea errem
+          eleifend definitionem vim. Ut nec hinc dolor possim. An eros argumentum vel, elit diceret duo eu,
+          quo et aliquid ornatus delicatissimi.
         </p>
       </div>
     </div>
 
+    <!-- Imagen izquierda + ítems derecha -->
     <div class="row align-items-center">
-      <!-- Imagen izquierda -->
+      <!-- Imagen -->
       <div class="col-md-6 text-center">
         <img src="img/corporate-woman.jpeg" alt="Chica corporativa" class="img-fluid rounded">
       </div>
 
-      <!-- Ítems derecha -->
+      <!-- Ítems con FontAwesome -->
       <div class="col-md-6">
-        <div class="feature-item mb-4">
-          <i class="fa-regular fa-circle-check fa-2x text-success mb-2"></i>
-          <h5 class="fw-bold">RESULT ORIENTED DESIGN</h5>
-          <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
+        <div class="feature-block d-flex mb-4">
+          <i class="fa-solid fa-chart-bar fa-2x text-verde me-3"></i>
+          <div>
+            <h5 class="fw-bold">RESULT ORIENTED DESIGN</h5>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+              sed quia non numquam eius modi tempora incidunt.</p>
+          </div>
         </div>
-        <div class="feature-item mb-4">
-          <i class="fa-regular fa-window-maximize fa-2x text-success mb-2"></i>
-          <h5 class="fw-bold">STUNNING LAYOUTS</h5>
-          <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
+        <div class="feature-block d-flex mb-4">
+          <i class="fa-regular fa-window-maximize fa-2x text-verde me-3"></i>
+          <div>
+            <h5 class="fw-bold">STUNNING LAYOUTS</h5>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+              sed quia non numquam eius modi tempora incidunt.</p>
+          </div>
         </div>
-        <div class="feature-item">
-          <i class="fa-regular fa-star fa-2x text-success mb-2"></i>
-          <h5 class="fw-bold">TOP NOTCH SERVICE</h5>
-          <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
+        <div class="feature-block d-flex">
+          <i class="fa-solid fa-pencil-ruler fa-2x text-verde me-3"></i>
+          <div>
+            <h5 class="fw-bold">TOP NOTCH SERVICE</h5>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+              sed quia non numquam eius modi tempora incidunt.</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-
 
 <!-- Sección Driven by Results -->
 <section id="results-driven" class="results-split-section">
